--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<h1>APP</h1>
+<hr>
+<app-servers></app-servers>
 
-
-<ul>
-  <li>
-    <a routerLink="">Home</a>
-  </li>
-  <li>
-    <a routerLink="about">about</a>
-  </li>
-</ul>
-
-
-
-<router-outlet></router-outlet>
