--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<h1>APP</h1>
-<hr>
-<app-servers></app-servers>
-
+<app-header></app-header>
+<app-recipes></app-recipes>
+<app-shopping-list></app-shopping-list>
