--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 body{
     font-family: 'Raleway', sans-serif;
-    padding:1em 2em;
-    background: mintcream;
+    margin:0px;
+    // background: mintcream;
     
 }
 
