--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
   <form class="form-container">
     <!-- <mat-form-field class="example-full-width">
       <input  matInput placeholder="Life Goal" [(ngModel)]="goalText"
-      [ngModelOptions]="{standalone: true}">
+      name ="s">
     </mat-form-field> -->
     
     <button type="submit" mat-flat-button color="warn"
